[REFACTOR] Fix tests for account management